<resources>
    <string name="app_name">FoodRecipes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- recipes -->
    <string name="recipes.recipes_title">Recipes</string>
    <string name="recipes.vegan_title">Vegan</string>
    <string name="recipes.meal_type">Meal Type</string>
    <string name="recipes.diet_type">Diet Type</string>
    <string name="recipes.search_title">Search</string>
    <string name="recipes.accessibility_go_to_details">Go to recipe %1$s</string>
    <string name="recipes.accessibility_filter_recipes">Filter recipes</string>
    <string name="recipes.accessibility_number_of_likes">This recipe has %1$s likes</string>
    <string name="recipes.accessibility_preparation_time">Preparation time is %1$s minutes</string>
    <string name="recipes.accessibility_vegan_recipe">This recipe is vegan</string>
    <string name="recipes.accessibility_non_vegan_recipe">This recipe is not vegan</string>
    <string name="recipes.accessibility_return_to_recipes">Return to recipes</string>

    <!-- Bottom Sheet -->
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">FingerFood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="diet_type">Diet Type</string>
    <string name="apply">Apply</string>

    <!-- recipe detail -->
    <string name="recipes_details.details_title">Detail Recipe</string>
    <string name="recipes_details.overview_title">Overview</string>
    <string name="recipes_details.ingredients_title">Ingredients</string>
    <string name="recipes_details.instructions_title">Instructions</string>

    <!-- favorites -->
    <string name="favorite.favorite_title">Favorites</string>

    <!-- jokes -->
    <string name="jokes.joke_title">Joke</string>

    <!-- common -->
    <string name="no_internet_connection">No internet connection</string>
</resources>