<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.recipes.recipeoverview.RecipeOverviewFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/overviewImg"
            android:layout_width="@dimen/dp_0"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <View
            android:id="@+id/gradient_overlay"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:background="@drawable/gradient_overlay"
            app:layout_constraintBottom_toBottomOf="@+id/overviewImg"
            app:layout_constraintEnd_toEndOf="@+id/overviewImg"
            app:layout_constraintStart_toStartOf="@+id/overviewImg"
            app:layout_constraintTop_toTopOf="@+id/overviewImg"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/time_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_12"
            android:layout_marginBottom="@dimen/dp_12"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/overviewImg"
            app:layout_constraintEnd_toEndOf="@+id/gradient_overlay"
            tools:text="100" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/time_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_preparation_time"
            app:layout_constraintBottom_toTopOf="@+id/time_textView"
            app:layout_constraintEnd_toEndOf="@+id/time_textView"
            app:layout_constraintStart_toStartOf="@+id/time_textView"
            app:tint="@color/white" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/likes_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_24"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/time_textView"
            app:layout_constraintEnd_toStartOf="@+id/time_textView"
            tools:text="100" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/likes_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_likes"
            app:layout_constraintBottom_toTopOf="@+id/likes_textView"
            app:layout_constraintEnd_toEndOf="@+id/likes_textView"
            app:layout_constraintStart_toStartOf="@+id/likes_textView"
            app:tint="@color/white" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_textView"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_12"
            android:fontFamily="@font/courgette"
            android:textColor="@color/darkGray"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overviewImg"
            tools:text="Title" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/vegetarian_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:src="@drawable/ic_checkmark"
            app:layout_constraintStart_toStartOf="@+id/title_textView"
            app:layout_constraintTop_toBottomOf="@+id/title_textView"
            app:tint="@color/darkGray" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/vegetarian_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:text="@string/vegetarian"
            android:textColor="@color/darkGray"
            tools:textColor="@color/green"
            app:layout_constraintBottom_toBottomOf="@+id/vegetarian_imageView"
            app:layout_constraintStart_toEndOf="@+id/vegetarian_imageView"
            app:layout_constraintTop_toTopOf="@+id/vegetarian_imageView" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/vegan_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:src="@drawable/ic_checkmark"
            app:layout_constraintStart_toStartOf="@+id/vegetarian_imageView"
            app:layout_constraintTop_toBottomOf="@+id/vegetarian_imageView"
            app:tint="@color/darkGray" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/vegan_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:text="@string/vegan"
            android:textColor="@color/darkGray"
            app:layout_constraintBottom_toBottomOf="@+id/vegan_imageView"
            app:layout_constraintStart_toEndOf="@+id/vegan_imageView"
            app:layout_constraintTop_toTopOf="@+id/vegan_imageView" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/gluten_free_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:src="@drawable/ic_checkmark"
            app:layout_constraintBottom_toBottomOf="@+id/vegetarian_textView"
            app:layout_constraintStart_toEndOf="@+id/vegetarian_textView"
            app:layout_constraintTop_toTopOf="@+id/vegetarian_textView"
            app:tint="@color/darkGray" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/gluten_free_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:text="@string/gluten_free"
            android:textColor="@color/darkGray"
            app:layout_constraintBottom_toBottomOf="@+id/gluten_free_imageView"
            app:layout_constraintStart_toEndOf="@+id/gluten_free_imageView"
            app:layout_constraintTop_toTopOf="@+id/gluten_free_imageView" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/dairy_free_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:src="@drawable/ic_checkmark"
            app:layout_constraintStart_toStartOf="@+id/gluten_free_imageView"
            app:layout_constraintTop_toBottomOf="@+id/gluten_free_imageView"
            app:tint="@color/darkGray" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dairy_free_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:text="@string/dairy_free"
            android:textColor="@color/darkGray"
            app:layout_constraintBottom_toBottomOf="@+id/dairy_free_imageView"
            app:layout_constraintStart_toEndOf="@+id/dairy_free_imageView"
            app:layout_constraintTop_toTopOf="@+id/dairy_free_imageView" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/healthy_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:src="@drawable/ic_checkmark"
            app:layout_constraintBottom_toBottomOf="@+id/gluten_free_textView"
            app:layout_constraintStart_toEndOf="@+id/gluten_free_textView"
            app:layout_constraintTop_toTopOf="@+id/gluten_free_textView"
            app:tint="@color/darkGray" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/healthy_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:text="@string/healthy"
            android:textColor="@color/darkGray"
            app:layout_constraintBottom_toBottomOf="@+id/healthy_imageView"
            app:layout_constraintStart_toEndOf="@+id/healthy_imageView"
            app:layout_constraintTop_toTopOf="@+id/healthy_imageView" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/cheap_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:src="@drawable/ic_checkmark"
            app:layout_constraintStart_toStartOf="@+id/healthy_imageView"
            app:layout_constraintTop_toBottomOf="@+id/healthy_imageView"
            app:tint="@color/darkGray" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cheap_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:text="@string/cheap"
            android:textColor="@color/darkGray"
            app:layout_constraintBottom_toBottomOf="@+id/cheap_imageView"
            app:layout_constraintStart_toEndOf="@+id/cheap_imageView"
            app:layout_constraintTop_toTopOf="@+id/cheap_imageView" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginEnd="@dimen/dp_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vegan_imageView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/summary_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_16"
                    tools:text="TextView" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>